syntax = "proto3";
option csharp_namespace = "Fuse8_ByteMinds.SummerSchool.InternalApi.Grpc.Contracts";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "CustomTypes.proto";

service GrpcCurrency {
    rpc GetCurrentCurrency(GetCurrentCurrencyRequest) returns (GetCurrencyResponse); 
    rpc GetCurrentCurrencyOnDate(GetCurrentCurrencyOnDateRequest) returns(GetCurrencyResponse);
    rpc GetSettings(google.protobuf.Empty) returns (GetSettingsResponse);
    rpc GetFavoriteCurrency(GetFavoriteCurrencyRequest) returns (GetFavoriteCurrencyResponse);
    rpc GetFavoriteCurrencyOnDate(GetFavoriteCurrencyOnDateRequest) returns (GetFavoriteCurrencyResponse);
}

message GetCurrentCurrencyRequest {
    string currency_code = 1;
}
message GetCurrentCurrencyOnDateRequest {
    string currency_code = 1;
    google.protobuf.Timestamp date = 2;
}
message GetFavoriteCurrencyRequest{
    string favorite_currency = 1;
    string favorite_currency_base = 2;
}
message GetFavoriteCurrencyOnDateRequest{
    string favorite_currency = 1;
    string favorite_currency_base = 2;
    google.protobuf.Timestamp date = 3;
}

message GetCurrencyResponse {
    StatusCodes status_code = 1;
    string currency_code = 2;
    CustomTypes.DecimalValue value = 3;
}
message GetSettingsResponse {
    StatusCodes status_code = 1;
    string base_currency_code = 2;
    bool can_request = 3;
}
message GetFavoriteCurrencyResponse{
    StatusCodes status_code = 1;
    CustomTypes.DecimalValue value = 2;
}

enum StatusCodes{
    STATUS_CODES_NO_ERROR = 0;
    STATUS_CODES_UNKNOWN_CURRENCY = 1;
    STATUS_CODES_NO_REQUESTS_LEFT = 2;
}